# gn_toolchain

./: BUILDCONFIG.gn  LICENSE  README.md  README_zh.md  app_bundle.gni  apple_targets.gni  fetch_binaries.py
.github/workflows/: autobuild.yml  linux.yml  macos.yml  windows.yml
config/: BUILD.gn  mac_targets.gni  target_template.gni
config/mac/: app_bundle.gni
config/posix/: BUILD.gn
config/win/: BUILD.gn  application.gni  setup_environment.gni  setup_environment.py
toolchain/linux/: BUILD.gn
toolchain/mac/: BUILD.gn
toolchain/win/: BUILD.gn  setup_environment.gni  setup_environment.py
tools/: boost.gni  boost.py  cmake.gni  cmake.py  copy.py  gn.gni  gn.py  golang.gni  golang.py  makefile.gni  makefile.py
