# =============================================================================
# Default
# =============================================================================

config("default") {
  if (is_debug) {
    defines = [
      "DEBUG",
      "_DEBUG",
    ]
  } else {
    defines = [ "NDEBUG" ]
  }

  if (is_win) {
    if (vs_version >= 100) {
      cflags_c = [ "/std:$c_std" ]
      cflags_cc = [ "/std:$cc_std" ]
    }
  } else {
    cflags_c = [ "-std=$c_std" ]
    cflags_cc = [ "-std=$cc_std" ]
  }
}
