template("cmake") {
  # required: cmake_root_dir, cmake_outputs
  # optional: cmake_options, cmake_build_dir, cmake_install_dir
  action("$target_name") {
    cmake_options = []
    cmake_build_dir = target_out_dir + "/" + target_name
    cmake_install_dir = root_out_dir + "/" + target_name
    forward_variables_from(invoker,
                           "*",
                           [
                             "script",
                             "args",
                             "input",
                             "output_name",
                           ])
    toolset = ""
    if (is_winxp) {
      if (vs_version > 141) {
        toolset = "v141_xp"
      } else if (vs_version >= 110) {
        toolset = "v${vs_version}_xp"
      }
    }
    script = "//build/tools/cmake.py"
    args = [
      rebase_path(cmake_root_dir, root_build_dir),
      string_join(",", cmake_options) + " ",
      rebase_path(cmake_build_dir, root_build_dir),
      rebase_path(cmake_install_dir, root_build_dir),
      "$target_cpu",
      "$is_debug",
      "$static_link_crt",
      toolset + " ",
      winver + " ",
    ]
    inputs = [ cmake_root_dir ]
    outputs = cmake_outputs
  }
}
