assert(is_posix)

# =============================================================================
# Default
# =============================================================================

config("default") {
  cflags = [
    "-g",
    "-fvisibility=hidden",
    "-fPIC",
    "-pthread",
  ]
}

# =============================================================================
# Optmize flags
# =============================================================================

config("optimize") {
  if (is_debug) {
    cflags += [
      "-O0",
      "-Og",
    ]
  } else {
    cflags += [ "-Ofast" ]
  }
}

# =============================================================================
# rpath config
# =============================================================================

config("rpath") {
  ldflags = []
  if (!is_apple) {
    ldflags += [
      "-Wl,-rpath=\$ORIGIN/",
      "-Wl,-rpath-link=",
    ]
  }
}
