assert(is_posix)

# =============================================================================
# Default
# =============================================================================

config("default") {
  cflags = [
    "-g",
    "-fvisibility=hidden",
    "-fPIC",
    "-pthread",
  ]
}

# =============================================================================
# Optmize flags
# =============================================================================

config("optmize") {
  if (is_debug) {
    cflags = [
      "-O0",
      "-Og",
    ]
  } else {
    cflags = [ "-Ofast" ]
  }
}

# =============================================================================
# Target arch
# =============================================================================

config("target_arch") {
  if (target_cpu == "x86") {
    cflags = [ "-m32" ]
    ldflags = [ "-m32" ]
  } else {
    cflags = [ "-m64" ]
    ldflags = [ "-m64" ]
  }
}

# =============================================================================
# rpath config
# =============================================================================

config("rpath") {
  ldflags = []
  if (!is_apple) {
    ldflags += [
      "-Wl,-rpath=\$ORIGIN/",
      "-Wl,-rpath-link=",
    ]
  }
}
